--- a/Futureskills/LinClass_06.ipynb
+++ b/Futureskills/LinClass_06.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMs6YJx9aCVJlI6PNbIZZoE",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ollihansen90/linclassifiers/blob/main/Futureskills/LinClass_06.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,13 +12,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "QbPcHvliKy3j"
+      },
       "source": [
         "# Kapitel 6 - Normalenform und Normalenvektor\n",
         "## Setup"
-      ],
-      "metadata": {
-        "id": "QbPcHvliKy3j"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -44,136 +28,41 @@
       },
       "outputs": [],
       "source": [
-        "# Todo: utils-Datei anlegen, die am Anfang geladen wird\n",
-        "# utils_linclass.py\n",
+        "# Dieser Block entfällt im Jupyter-Hub, weil die Daten schon auf dem Server liegt\n",
+        "!wget -nc -q https://raw.githubusercontent.com/ollihansen90/linclassifiers/main/Futureskills/utils/utils.py"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.colors as mcolors\n",
         "\n",
-        "from IPython.display import display\n",
-        "from PIL import Image\n",
-        "from IPython.display import Image as Image_\n",
-        "\n",
-        "class Koordinatensystem():\n",
-        "    def __init__(self, config={}):\n",
-        "        self.config = {\n",
-        "            \"size\": 11,\n",
-        "            \"grid_alpha\": 0.1,\n",
-        "            }\n",
-        "        self.config.update(config)\n",
-        "\n",
-        "    def draw(self):\n",
-        "        size = self.config[\"size\"]\n",
-        "        grid_alpha = self.config[\"grid_alpha\"]\n",
-        "        plt.plot([0,0], [-size,size], \"k\")\n",
-        "        plt.plot([-size,size], [0,0], \"k\")\n",
-        "        for t in range(1,size):\n",
-        "            plt.plot([t,t], [-size,size], \"k\", alpha=grid_alpha)\n",
-        "            plt.plot([-t,-t], [-size,size], \"k\", alpha=grid_alpha)\n",
-        "            plt.plot([-size,size], [t,t], \"k\", alpha=grid_alpha)\n",
-        "            plt.plot([-size,size], [-t,-t], \"k\", alpha=grid_alpha)\n",
-        "            if t%2==0:\n",
-        "                plt.plot([t,t], [-0.1,0.1], \"k\")\n",
-        "                plt.text(t,-0.5, str(t), {\"horizontalalignment\":\"center\", \"verticalalignment\":\"center\"})\n",
-        "                plt.plot([-t,-t], [-0.1,0.1], \"k\")\n",
-        "                plt.text(-t,-0.5, str(-t), {\"horizontalalignment\":\"center\", \"verticalalignment\":\"center\"})\n",
-        "                plt.plot([-0.1,0.1], [t,t], \"k\")\n",
-        "                plt.text(-0.4, -t, str(-t), {\"horizontalalignment\":\"right\", \"verticalalignment\":\"center\"})\n",
-        "                plt.plot([-0.1,0.1], [-t,-t], \"k\")\n",
-        "                plt.text(-0.4, t, str(t), {\"horizontalalignment\":\"right\", \"verticalalignment\":\"center\"})\n",
-        "        plt.plot([-0.1,0,0.1], [size-0.2,size,(size-0.2)], \"k\")\n",
-        "        plt.plot([(size-0.2),size,(size-0.2)], [-0.1,0,0.1], \"k\")\n",
-        "        plt.plot([-0.1,0,0.1], [-(size-0.2),-size,-(size-0.2)], \"k\")\n",
-        "        plt.plot([-(size-0.2),-size,-(size-0.2)], [-0.1,0,0.1], \"k\")\n",
-        "        plt.text(-0.4, (size-0.2), \"y\", {\"horizontalalignment\":\"center\", \"verticalalignment\":\"center\"})\n",
-        "        plt.text(size, -0.4, \"x\", {\"horizontalalignment\":\"center\", \"verticalalignment\":\"center\"})\n",
-        "\n",
-        "class Vektorfolge():\n",
-        "    def __init__(self, veclist, colorlist=list(mcolors.TABLEAU_COLORS.keys()), alphalist=None):\n",
-        "        self.veclist = veclist\n",
-        "        self.colorlist = colorlist\n",
-        "        self.alphalist = [1]*len(veclist) if alphalist==None else alphalist\n",
-        "        self.config = {\"angles\":'xy', \"scale_units\":'xy', \"scale\":1, \"width\":0.005, \"zorder\":2}\n",
-        "\n",
-        "    def draw(self):\n",
-        "        plt.quiver(0,0,*self.veclist[0],**self.config, color=self.colorlist[0], alpha=self.alphalist[0])\n",
-        "        v = self.veclist[0].copy()\n",
-        "        for i in range(1, len(self.veclist)):\n",
-        "            plt.quiver(\n",
-        "                *v,\n",
-        "                *self.veclist[(i)],\n",
-        "                **self.config,\n",
-        "                color=self.colorlist[(i)%len(self.colorlist)],\n",
-        "                alpha=self.alphalist[i]\n",
-        "                )\n",
-        "            v += self.veclist[i].copy()\n",
-        "\n",
-        "class Gerade():\n",
-        "    def __init__(self, aufpunkt, richtung):\n",
-        "        assert aufpunkt.shape==np.zeros(2).shape, \"Der Vektor für den Aufpunkt hat nicht die richtige Form.\"\n",
-        "        assert richtung.shape==np.zeros(2).shape, \"Der Vektor für die Richtung hat nicht die richtige Form.\"\n",
-        "        assert np.sum(np.abs(richtung))>0, \"Der Vektor darf nicht [0,0] sein.\"\n",
-        "        self.aufpunkt = aufpunkt\n",
-        "        self.richtung = richtung\n",
-        "\n",
-        "    def draw(self, col=\"tab:blue\"):\n",
-        "        size = 11\n",
-        "        ecke1 = self.aufpunkt.copy()\n",
-        "        while np.max(np.abs(ecke1))<=size:\n",
-        "            ecke1 += self.richtung\n",
-        "        ecke2 = self.aufpunkt.copy()\n",
-        "        while np.max(np.abs(ecke2))<=size:\n",
-        "            ecke2 -= self.richtung\n",
-        "        ecken = np.stack([ecke1, ecke2])\n",
-        "        plt.plot(ecken[:,0], ecken[:,1], col)\n",
-        "\n",
-        "    def on_gerade(self, pt):\n",
-        "        p = pt.copy().astype(float)\n",
-        "        p -= self.aufpunkt\n",
-        "        if np.sum(p**2)==0:\n",
-        "            return True\n",
-        "        p /= np.linalg.norm(p)\n",
-        "        return np.abs((self.richtung/np.linalg.norm(self.richtung))@p)>1-1e-6\n",
-        "\n",
-        "def generate_data():\n",
-        "    np.random.seed(1)\n",
-        "\n",
-        "    N = 100\n",
-        "    data = 3*np.random.randn(N,2)\n",
-        "    data[:N//2] += np.array([-4,6])\n",
-        "    data[N//2:] += np.array([2,-8])\n",
-        "    data = np.column_stack([data, -np.ones(N)])\n",
-        "    label = np.array(N//2*[1]+N//2*[-1])\n",
-        "\n",
-        "    # Permutiere Daten\n",
-        "    perm = np.random.permutation(len(label))\n",
-        "    data = data[perm]\n",
-        "    label = label[perm]\n",
-        "\n",
-        "    return data, label\n",
-        "\n",
-        "def show_vid(vid):\n",
-        "    every = max((len(vid)//50, 1))\n",
-        "    vid = np.stack(vid[::every])\n",
-        "    vid = [Image.fromarray(img) for img in vid]\n",
-        "    vid[0].save(\"array.gif\", save_all=True, append_images=vid[1:], duration=50, loop=0)\n",
-        "\n",
-        "    with open('/content/array.gif','rb') as f:\n",
-        "        display(Image_(data=f.read(), format='gif'))"
+        "from IPython.display import clear_output\n",
+        "from utils import Koordinatensystem, Vektorfolge, Gerade"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "k37ljquukg-X"
+      },
       "source": [
         "## Aufgabe 1: Gerade ablesen\n",
         "In der folgenden Aufgabe soll das Aufstellen von Geraden in Normalenform geübt werden. Gegeben sind zwei Punkte `[-2,7]` und `[3,6]`. Gesucht sind Aufpunkt und Normalenvektor, sodass die sich daraus ergebende Gerade durch die beiden Punkte verläuft."
-      ],
-      "metadata": {
-        "id": "k37ljquukg-X"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "irYPMYJdk6RU"
+      },
+      "outputs": [],
       "source": [
         "def draw(aufpunkt=np.zeros(2), normal=np.array([-1,1]), first=False):\n",
         "    data = np.array([[3,6],[-2,7]])\n",
@@ -214,12 +103,23 @@
         "\n",
         "    clear_output()\n",
         "    done = draw(aufpunkt, normal)\n"
-      ],
-      "metadata": {
-        "id": "irYPMYJdk6RU"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMs6YJx9aCVJlI6PNbIZZoE",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
