even even more Erroronis!

--- a/Futureskills/LinClass_03.ipynb
+++ b/Futureskills/LinClass_03.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPWE3289oSRN34hImj+6yUg",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ollihansen90/linclassifiers/blob/main/Futureskills/LinClass_03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "tC97v5TsW40F"
+      },
       "source": [
         "# Lineare Klassifizierer\n",
         "## Kapitel 3 - Vektoren\n",
@@ -42,10 +29,7 @@
         "\n",
         "Der Vektor `d` ist das Doppelte von `b`. Sinnbildlich kann man sich das so vorstellen, als würden wir in Richtung `b` laufen und danach die gleiche Strecke nochmals \"hinten anhängen\". Rechnerisch ergibt das auch Sinn:\n",
         "$$2\\cdot\\vec{b}=\\vec{b}+\\vec{b}.$$\n"
-      ],
-      "metadata": {
-        "id": "tC97v5TsW40F"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -79,6 +63,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "mK20CeOMejtN"
+      },
       "source": [
         "### Aufgabe 2: Rechnen mit Vektoren\n",
         "In dieser Aufgabe sollen zwei gegebene Vektoren kombiniert werden, sodass ein neuer Vektor entsteht.\n",
@@ -88,20 +75,22 @@
         "2. Vektor `d` ist die Hälfte von Vektor `b`.\n",
         "3. Vektor `e` ist die Summe von Vektor `c` und Vektor `d`.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "mK20CeOMejtN"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Y8LLJRmDekK9"
+      },
+      "outputs": [],
       "source": [
         "# Definition der Vektoren\n",
         "a = np.array([1,2])\n",
         "b = np.array([1,-1])\n",
-        "c = -a\n",
-        "d = 0.5*b\n",
-        "e = c+d\n",
+        "c = \n",
+        "d = \n",
+        "e = \n",
         "\n",
         "# Abbildung plotten\n",
         "config = {\"angles\":'xy', \"scale_units\":'xy', \"scale\":1, \"width\":0.008}\n",
@@ -121,12 +110,23 @@
         "    print(f\"Der berechnete Vektor e lautet [{e[0]},{e[1]}]. Die Lösung ist aber e=[-0.5,-2.5].\")\n",
         "else:\n",
         "    print(\"Es hat alles funktionert! Ausgezeichnet!\")"
-      ],
-      "metadata": {
-        "id": "Y8LLJRmDekK9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPWE3289oSRN34hImj+6yUg",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
