--- a/Futureskills/LinClass_07.ipynb
+++ b/Futureskills/LinClass_07.ipynb
@@ -80,6 +80,7 @@
     "    test = input(\"Gewichtsvektor: \")\n",
     "    gewichtsvektor = np.array([float(s) for s in test.split(\",\")])\n",
     "    print(\"Geben Sie einen Schwellenwert ein. (Zum Beispiel -0.5)\")\n",
+    "    sleep(0.1)\n",
     "    test = input(\"Schwellenwert: \")\n",
     "    theta = float(test)\n",
     "\n",
@@ -112,9 +113,11 @@
     "done = False\n",
     "while not done:\n",
     "    print(\"Geben Sie einen Gewichtsvektor ein. (Zum Beispiel 1,-1)\")\n",
+    "    sleep(0.1)\n",
     "    test = input(\"Gewichtsvektor: \")\n",
     "    gewichtsvektor = np.array([float(s) for s in test.split(\",\")])\n",
     "    print(\"Geben Sie einen Schwellenwert ein. (Zum Beispiel -0.5)\")\n",
+    "    sleep(0.1)\n",
     "    test = input(\"Schwellenwert: \")\n",
     "    theta = float(test)\n",
     "\n",
