--- a/Futureskills/LinClass_05.ipynb
+++ b/Futureskills/LinClass_05.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOEP9fe5krDBpz0Bf5YuGkC",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "CYJhVhuGAlNw"
+      },
       "source": [
         "# Kapitel 5 - Betrag eines Vektors\n",
         "In diesem Notebook soll es um den Winkel zwischen Vektoren gehen.\n",
@@ -41,10 +28,7 @@
         "  <summary>Lösungshinweis</summary>\n",
         "   Im Zweidimensionalen lässt sich ein orthogonaler Vektor sehr einfach finden, indem die Komponenten getauscht und einer der Komponenten negiert wird. Ist Beispielsweise ein Vektor [-5,3] gegeben, so wäre ein orthogonaler Vektor [3,5].\n",
         "</details>"
-      ],
-      "metadata": {
-        "id": "CYJhVhuGAlNw"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -74,5 +58,21 @@
         "plt.show()"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyOEP9fe5krDBpz0Bf5YuGkC",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
