--- a/Futureskills/LinClass_08.ipynb
+++ b/Futureskills/LinClass_08.ipynb
@@ -30,8 +30,8 @@
    "outputs": [],
    "source": [
     "# Dieser Block entfällt im Jupyter-Hub, weil die Daten schon auf dem Server liegt\n",
-    "!wget -nc -q https://raw.githubusercontent.com/ollihansen90/linclassifiers/main/Futureskills/utils/utils.py\n",
-    "!wget -nc -q https://raw.githubusercontent.com/ollihansen90/linclassifiers/main/Futureskills/utils/utils_linclass_08.py"
+    "!wget -nc -q https://raw.githubusercontent.com/ollihansen90/linclassifiers/main/Futureskills/utils/utils.zip\n",
+    "!unzip -qq utils.zip -d utils"
    ]
   },
   {
